--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.5",
+    "event-source-polyfill": "^1.0.31",
     "express": "^5.1.0",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +39,7 @@
     "pdf2pic": "^3.2.0",
     "pg": "^8.16.3",
     "puppeteer": "^24.18.0",
+    "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1",
     "tesseract.js-node": "^0.1.0",
     "youtubei.js": "^15.0.1",
