--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "pdf2pic": "^3.2.0",
     "pg": "^8.16.3",
     "puppeteer": "^24.18.0",
+    "react-pdf": "^10.2.0",
     "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1",
     "tesseract.js-node": "^0.1.0",
@@ -58,7 +59,7 @@
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.5",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
 }
