--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "sarthiai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -49,6 +49,7 @@
     "event-source-polyfill": "^1.0.31",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -56,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.2.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-syntax-highlighter": "^15.6.6",
