--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "pg": "^8.16.3",
     "puppeteer": "^24.18.0",
     "react-pdf": "^10.2.0",
+    "react-split-pane": "^0.1.92",
     "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1",
     "tesseract.js-node": "^0.1.0",
