--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rexxars/react-split-pane": "^1.0.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +53,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -60,6 +62,8 @@
     "react-pdf": "^10.2.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-split-pane": "^0.1.92",
+    "react-split-pane-next": "^1.0.6",
     "react-syntax-highlighter": "^15.6.6",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
